<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.recyclerviewsearch.MainActivity">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/set_profile_picture"
            android:icon="@drawable/ic_profile"
            android:title="@string/set_profile_picture" />

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />

    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />

    </group>

</menu>