<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_900"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@mipmap/saving_people"
                android:tint="@color/green_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/green_300"
                android:textSize="20dp" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">


                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/blue_grey_500"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_300"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/blue_grey_500"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_300"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:background="@drawable/login_shape_btn"
                        android:fontFamily="monospace"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/blue_grey_900"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="monospace"
                            android:text="@string/new_user"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/blue_grey_300" />

                        <TextView
                            android:id="@+id/sign_up_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:fontFamily="monospace"
                            android:text="@string/sign_up"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/green_300"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/login_loading"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="100dp"
                        android:indeterminateTint="@color/green_300"
                        android:visibility="gone" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>


    </FrameLayout>

</LinearLayout>