<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".contact_us.ContactActivity">

    <include
        android:id="@+id/contact_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="@string/contact_us"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/blue_grey_900"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/swipe_up_handle"
                        android:tint="@color/blue_grey_900" />

                    <EditText
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:backgroundTint="@color/blue_grey_900"
                        android:gravity="top"
                        android:hint="@string/your_message_here"
                        android:inputType="textMultiLine"
                        android:textColor="@color/blue_grey_900"
                        android:textColorHint="@color/blue_grey_900"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/send_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:background="@drawable/contact_shape_btn"
                        android:fontFamily="monospace"
                        android:text="@string/send_email"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>